--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -2,4 +2,23 @@
     <div class="page-header">
       <h1 id="container">Login</h1>
     </div>
+    <div class="row">
+    	<div class="col-lg-6" ng-controller="loginHomeCtrl">
+    		<!-- start form -->
+    		<form role="form" name="loginHomeForm" novalidate>
+				  <div class="form-group" ng-class="{'has-error': loginHomeForm.username.$invalid && loginHomeForm.username.$dirty}">
+				    <label for="username">Username</label>
+				    <span class="label label-danger pull-right" ng-show="loginHomeForm.username.$error.required && loginHomeForm.username.$dirty">Required</span>
+				    <input type="text" class="form-control" name="username" placeholder="Username" required ng-model="username">
+				  </div>
+				  <div class="form-group" ng-class="{'has-error': loginHomeForm.password.$invalid && loginHomeForm.password.$dirty}">
+				    <label for="password">Password</label>
+				    <span class="label label-danger pull-right" ng-show="loginHomeForm.password.$error.required && loginHomeForm.password.$dirty">Required</span>
+				    <input type="password" class="form-control" name="password" placeholder="Password" required ng-model="password">
+				  </div>
+				  <button type="submit" class="btn btn-default" ng-click="login(loginHomeForm)" ng-disable="{loginHomeForm.$valid && loginHomeForm.$dirty}">Submit</button>
+				</form>
+    		<!-- end form -->
+    	</div>
+    </div>
 </div>
