--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -16,7 +16,7 @@
 				    <span class="label label-danger pull-right" ng-show="loginHomeForm.password.$error.required && loginHomeForm.password.$dirty">Required</span>
 				    <input type="password" class="form-control" name="password" placeholder="Password" required ng-model="password">
 				  </div>
-				  <button type="submit" class="btn btn-default" ng-click="login(loginHomeForm)" ng-disable="{loginHomeForm.$valid && loginHomeForm.$dirty}">Submit</button>
+				  <button id="submit_btn" type="submit" class="btn btn-default" ng-click="login(loginHomeForm)" ng-disable="{loginHomeForm.$valid && loginHomeForm.$dirty}">Submit</button>
 				</form>
     		<!-- end form -->
     	</div>
