--- a/app/components/web_properties/add.html
+++ b/app/components/web_properties/add.html
@@ -7,14 +7,14 @@
 		  <div class="form-group" ng-class="{'has-error': propAddForm.username.$invalid && propAddForm.name.$dirty}">
 		    <label for="username">Name</label>
 		    <span class="label label-danger pull-right" ng-show="propAddForm.username.$error.required && propAddForm.username.$dirty">Required</span>
-		    <input type="text" class="form-control" name="username" placeholder="Name" required ng-model="prop_name">
+		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="prop_name">
 		  </div>
 		  <div class="form-group" ng-class="{'has-error': propAddForm.password.$invalid && propAddForm.password.$dirty}">
-		    <label for="password">URL</label>
+		    <label for="url">URL</label>
 		    <span class="label label-danger pull-right" ng-show="propAddForm.password.$error.required && propAddForm.password.$dirty">Required</span>
-		    <input type="password" class="form-control" name="password" placeholder="http://www.mydomain.com" required ng-model="url">
+		    <input type="url" class="form-control" name="url" placeholder="http://www.mydomain.com" required ng-model="url">
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="login(propAddForm)" ng-disable="{propAddForm.$valid && propAddForm.$dirty}">Add</button>
+		  <button type="submit" class="btn btn-default" ng-click="WebPropertiesService.createWebproperty(propAddForm)" ng-disable="{propAddForm.$valid && propAddForm.$dirty}">Add</button>
 		</form>
 <!-- end form -->
   </div>
