--- a/app/components/web_properties/list.html
+++ b/app/components/web_properties/list.html
@@ -1,9 +1,8 @@
 <ul>
 	<li ng-repeat="prop in WebPropertiesService.webproperties" style="height:50px;">
-		{{prop.name}}
+		<a ng-click="selectWebproperty($index)">{{prop.name}}</a>
 		<button type="button" class="btn btn-success pull-right"
 			ng-click="editWebproperty($index)"
 		>Edit</button>
 	</li>
 </ul>
-{{currentWebpropertyIndex}}
