--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -8,10 +8,35 @@
     <a class="navbar-brand" href="#">EZAB</a>
   </div>
   <div class="navbar-collapse collapse navbar-responsive-collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="#/dashboard">Dashboard</a></li>
-      <li><a href="#">Campaigns</a></li>
+    <ul class="nav navbar-nav" ng-controller="headerWebpropertiesCtrl">
+      <li class="dropdown">
+        <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-globe"></span><b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li ng-repeat="prop in WebPropertiesService.webproperties">
+            <a href="#">{{prop.name}}</a>
+          </li>
+          <li class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
+      <li><a href="">{{WebPropertiesService.webproperties[WebPropertiesService.currentWebpropertyIndex].name}}</a></li>
     </ul>
+    <!-- end web prop header -->
+    <!-- start campaign header -->
+    <ul class="nav navbar-nav" ng-controller="headerCampaignsCtrl">
+      <li class="dropdown">
+        <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-tower"></span><b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li ng-repeat="campaign in CampaignService.campaigns">
+            <a href="#">{{campaign.name}}</a>
+          </li>
+          <li class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
+      <li><a href="">{{CampaignService.campaigns[0].name}}</a></li>
+    </ul>
+    <!-- end campaign header -->
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Link</a></li>
       <li class="dropdown">
