--- a/app/components/campaigns/campaigns.edit.html
+++ b/app/components/campaigns/campaigns.edit.html
@@ -1,6 +1,6 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-controller="campaignsEditCtrl">
   <!-- Default panel contents -->
-  <div class="panel-heading">Create new Campaign</div>
+  <div class="panel-heading">Edit</div>
   <div class="panel-body">
     <!-- start form -->
     <form role="form" name="campaignAddForm" novalidate>
