--- a/app/components/dash/campaign.list.html
+++ b/app/components/dash/campaign.list.html
@@ -1,4 +1,5 @@
 <ul>
+			<!-- {{CampaignService.campaigns}}	 -->
 	<li ng-repeat="campaign in CampaignService.campaigns">
 		{{campaign.name}}
 		</li>
