--- a/app/components/web_properties/main.html
+++ b/app/components/web_properties/main.html
@@ -2,7 +2,7 @@
     <div class="page-header">
       <h1 id="container">Web Properties</h1>
     </div>
-    <div class="row" ng-controller="webPropertiesMainCtrl">
+    <div class="row">
     	<div ui-view="proplist" class="col-lg-4"></div>
     	<div ui-view="propcontrol" class="col-lg-8"></div>
     </div>
