--- a/app/components/campaigns/main.html
+++ b/app/components/campaigns/main.html
@@ -2,8 +2,8 @@
     <div class="page-header">
       <h1 id="container">Campaigns</h1>
     </div>
-    <div class="row" ng-controller="campaignsMainCtrl">
-    	<div ui-view="campaignlist" class="col-lg-4"></div>
+    <div class="row">
+    	<div ui-view="campaignlist" class="col-lg-3"></div>
     	<div ui-view="campaigncontrol" class="col-lg-8"></div>
     </div>
 </div>
