--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -8,22 +8,22 @@
     <a class="navbar-brand" href="#">EZAB</a>
   </div>
   <div class="navbar-collapse collapse navbar-responsive-collapse">
-    <ul class="nav navbar-nav" ng-controller="headerWebpropertiesCtrl">
+    <ul class="nav navbar-nav" ng-controller="webpropertiesHeaderListCtrl">
       <li class="dropdown">
         <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-globe"></span><b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li ng-repeat="prop in WebPropertiesService.webproperties">
-            <a href="#">{{prop.name}}</a>
+            <a ng-click="WebPropertiesService.selectWebproperty($index)">{{prop.name}}</a>
           </li>
           <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
+          <li><a ui-sref="webprops">Listing</a></li>
         </ul>
       </li>
-      <li><a href="">{{WebPropertiesService.webproperties[WebPropertiesService.currentWebpropertyIndex].name}}</a></li>
+      <li><a href="">{{WebPropertiesService.currentWebproperty.name}}</a></li>
     </ul>
     <!-- end web prop header -->
     <!-- start campaign header -->
-    <ul class="nav navbar-nav" ng-controller="headerCampaignsCtrl">
+    <ul class="nav navbar-nav" ng-controller="campaignsHeaderListCtrl">
       <li class="dropdown">
         <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-tower"></span><b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -34,7 +34,7 @@
           <li><a href="#">Separated link</a></li>
         </ul>
       </li>
-      <li><a href="">{{CampaignService.campaigns[0].name}}</a></li>
+      <li><a href="">{{CampaignService.currentCampaign.name}}</a></li>
     </ul>
     <!-- end campaign header -->
     <ul class="nav navbar-nav navbar-right">
