--- a/app/components/dash/campaign.list.html
+++ b/app/components/dash/campaign.list.html
@@ -1,6 +1,5 @@
 <ul>
-			<!-- {{CampaignService.campaigns}}	 -->
-	<li ng-repeat="campaign in CampaignService.campaigns">
-		{{campaign.name}}
-		</li>
+	<li ng-repeat="exp in ExperienceService.experiences">
+		{{exp.name}}
+	</li>
 </ul>
