--- a/app/components/dash/main.html
+++ b/app/components/dash/main.html
@@ -3,8 +3,8 @@
       <h1 id="container">DASHBOARD</h1>
     </div>
     <div class="row">
-    	<div ui-view="camplist" class="col-lg-2" ng-controller="campaignListCtrl"></div>
-    	<div ui-view="campcontrol" class="col-lg-4"></div>
+    	<div ui-view="explist" class="col-lg-2"></div>
+    	<div ui-view="expcontrol" class="col-lg-4"></div>
     	<div ui-view="graph" class="col-lg-6"></div>
     </div>
 </div>
