modal popup working

--- a/app/components/dash/main.html
+++ b/app/components/dash/main.html
@@ -4,7 +4,11 @@
     </div>
     <div class="row">
     	<div ui-view="explist" class="col-lg-2"></div>
-    	<div ui-view="expcontrol" class="col-lg-4"></div>
-    	<div ui-view="graph" class="col-lg-6"></div>
+    	<div ui-view="graph" class="col-lg-10"></div>
+    </div>
+    <div ng-controller="experiencesControlCtrl">
+      <modal-dialog show='modalShown' width='750px' height='90%'>
+            <div ui-view="expcontrol"></div>
+    	</modal-dialog>
     </div>
 </div>
