--- a/app/components/experiences/exp.list.html
+++ b/app/components/experiences/exp.list.html
@@ -1,11 +1,57 @@
-<ul class="list-group"
-		ng-controller="experiencesListCtrl">
-  <li class="list-group-item"
-  		ng-repeat="exp in ExperienceService.experiences">
-      {{exp.name}}
-  		<span class="badge">
-  			<span class="glyphicon glyphicon-wrench"
-  			></span>
-  		</span>
-  </li>
-</ul>
+<div ng-controller="experiencesListCtrl">
+  <ul class="list-group">
+    <li class="list-group-item" ng-click="editExperience($index)"
+    		ng-repeat="exp in experiences">
+        {{exp.name}}
+    		<span class="badge">
+    			<span class="glyphicon glyphicon-wrench" 
+    			></span>
+    		</span>
+    </li>
+  </ul>
+</div>
+
+<style>
+.ng-modal-overlay {
+  /* A dark translucent div that covers the whole screen */
+  position:absolute;
+  z-index:9999;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:#000000;
+  opacity: 0.8;
+}
+.ng-modal-dialog {
+  /* A centered div above the overlay with a box shadow. */
+  z-index:10000;
+  position: absolute;
+  width: 30%; /* Default */
+
+  /* Center the dialog */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+
+  background-color: #fff;
+  box-shadow: 4px 4px 80px #000;
+}
+.ng-modal-dialog-content {
+  padding:10px;
+  text-align: left;
+}
+.ng-modal-close {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 120%;
+  display: inline-block;
+  font-weight: bold;
+  font-family: 'arial', 'sans-serif';
+}
+</style>
