add/update webproperties client side

--- a/app/components/web_properties/add.html
+++ b/app/components/web_properties/add.html
@@ -1,20 +1,21 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-controller="webpropertiesAddCtrl">
   <!-- Default panel contents -->
   <div class="panel-heading">Add Web Property</div>
   <div class="panel-body">
     <!-- start form -->
     <form role="form" name="propAddForm" novalidate>
-		  <div class="form-group" ng-class="{'has-error': propAddForm.username.$invalid && propAddForm.name.$dirty}">
-		    <label for="username">Name</label>
-		    <span class="label label-danger pull-right" ng-show="propAddForm.username.$error.required && propAddForm.username.$dirty">Required</span>
-		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="prop_name">
+		  <div class="form-group" 
+		  	ng-class="{'has-error': propAddForm.name.$invalid && propAddForm.name.$dirty}">
+		    <label for="name">Name</label>
+		    <span class="label label-danger pull-right" ng-show="propAddForm.name.$error.required && propAddForm.name.$dirty">Required</span>
+		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="prop.name">
 		  </div>
-		  <div class="form-group" ng-class="{'has-error': propAddForm.password.$invalid && propAddForm.password.$dirty}">
+		  <div class="form-group" ng-class="{'has-error': propAddForm.url.$invalid && propAddForm.url.$dirty}">
 		    <label for="url">URL</label>
-		    <span class="label label-danger pull-right" ng-show="propAddForm.password.$error.required && propAddForm.password.$dirty">Required</span>
-		    <input type="url" class="form-control" name="url" placeholder="http://www.mydomain.com" required ng-model="url">
+		    <span class="label label-danger pull-right" ng-show="propAddForm.url.$error.required && propAddForm.url.$dirty">Required</span>
+		    <input type="url" class="form-control" name="url" placeholder="http://www.mydomain.com" required ng-model="prop.url">
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="WebPropertiesService.createWebproperty(propAddForm)" ng-disable="{propAddForm.$valid && propAddForm.$dirty}">Add</button>
+		  <button type="submit" class="btn btn-default" ng-click="createWebproperty()" ng-disabled="propAddForm.$invalid">Add</button>
 		</form>
 <!-- end form -->
   </div>
