campaign crud touch ups

--- a/app/components/campaigns/campaigns.edit.html
+++ b/app/components/campaigns/campaigns.edit.html
@@ -3,24 +3,24 @@
   <div class="panel-heading">Edit</div>
   <div class="panel-body">
     <!-- start form -->
-    <form role="form" name="campaignAddForm" novalidate>
-		  <div class="form-group" ng-class="{'has-error': campaignAddForm.name.$invalid && campaignAddForm.name.$dirty}">
+    <form role="form" name="campaignEditForm" novalidate>
+		  <div class="form-group" ng-class="{'has-error': campaignEditForm.name.$invalid && campaignEditForm.name.$dirty}">
 		    <label for="name">Name</label>
-		    <span class="label label-danger pull-right" ng-show="campaignAddForm.name.$error.required && campaignAddForm.name.$dirty">Required</span>
+		    <span class="label label-danger pull-right" ng-show="campaignEditForm.name.$error.required && campaignEditForm.name.$dirty">Required</span>
 		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="tmp.name">
 		  </div>
-		  <div class="form-group" ng-class="{'has-error': campaignAddForm.start.$invalid && campaignAddForm.start.$dirty}">
+		  <div class="form-group" ng-class="{'has-error': campaignEditForm.start.$invalid && campaignEditForm.start.$dirty}">
 		    <label for="start">Start</label>
-		    <span class="label label-danger pull-right" ng-show="campaignAddForm.start.$error.required && campaignAddForm.start.$dirty">Required</span>
+		    <span class="label label-danger pull-right" ng-show="campaignEditForm.start.$error.required && campaignEditForm.start.$dirty">Required</span>
 		    <textarea class="form-control" name="start" placeholder="return true;" required ng-model="tmp.start"></textarea>
 		  </div>
 		  
-		  <div class="form-group" ng-class="{'has-error': campaignAddForm.success.$invalid && campaignAddForm.success.$dirty}">
+		  <div class="form-group" ng-class="{'has-error': campaignEditForm.success.$invalid && campaignEditForm.success.$dirty}">
 		    <label for="success">Success</label>
-		    <span class="label label-danger pull-right" ng-show="campaignAddForm.success.$error.required && campaignAddForm.success.$dirty">Required</span>
+		    <span class="label label-danger pull-right" ng-show="campaignEditForm.success.$error.required && campaignEditForm.success.$dirty">Required</span>
 		    <textarea class="form-control" name="success" placeholder="return true;" required ng-model="tmp.success"></textarea>
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="(campaignAddForm)" ng-disable="{campaignAddForm.$valid && campaignAddForm.$dirty}">Add</button>
+		  <button type="submit" class="btn btn-default" ng-click="editCampaign()" ng-disabled="campaignEditForm.$invalid">Edit</button>
 		</form>
 <!-- end form -->
   </div>
