--- a/app/components/campaigns/campaigns.add.html
+++ b/app/components/campaigns/campaigns.add.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-controller="campaignsAddCtrl">
   <!-- Default panel contents -->
   <div class="panel-heading">Create new Campaign</div>
   <div class="panel-body">
@@ -7,20 +7,20 @@
 		  <div class="form-group" ng-class="{'has-error': campaignAddForm.name.$invalid && campaignAddForm.name.$dirty}">
 		    <label for="name">Name</label>
 		    <span class="label label-danger pull-right" ng-show="campaignAddForm.name.$error.required && campaignAddForm.name.$dirty">Required</span>
-		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="tmp.name">
+		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="camp.name">
 		  </div>
 		  <div class="form-group" ng-class="{'has-error': campaignAddForm.start.$invalid && campaignAddForm.start.$dirty}">
 		    <label for="start">Start</label>
 		    <span class="label label-danger pull-right" ng-show="campaignAddForm.start.$error.required && campaignAddForm.start.$dirty">Required</span>
-		    <textarea class="form-control" name="start" placeholder="return true;" required ng-model="tmp.start"></textarea>
+		    <textarea class="form-control" name="start" placeholder="return true;" required ng-model="camp.start"></textarea>
 		  </div>
 		  
 		  <div class="form-group" ng-class="{'has-error': campaignAddForm.success.$invalid && campaignAddForm.success.$dirty}">
 		    <label for="success">Success</label>
 		    <span class="label label-danger pull-right" ng-show="campaignAddForm.success.$error.required && campaignAddForm.success.$dirty">Required</span>
-		    <textarea class="form-control" name="success" placeholder="return true;" required ng-model="tmp.success"></textarea>
+		    <textarea class="form-control" name="success" placeholder="return true;" required ng-model="camp.success"></textarea>
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="(campaignAddForm)" ng-disable="{campaignAddForm.$valid && campaignAddForm.$dirty}">Add</button>
+		  <button type="submit" class="btn btn-default" ng-click="createCampaign()" ng-disabled="campaignAddForm.$invalid">Add</button>
 		</form>
 <!-- end form -->
   </div>
