--- a/app/components/experiences/exp.edit.html
+++ b/app/components/experiences/exp.edit.html
@@ -3,18 +3,18 @@
   <div class="panel-heading">Edit</div>
   <div class="panel-body">
     <!-- start form -->
-    <form role="form" name="campaignAddForm" novalidate>
-		  <div class="form-group" ng-class="{'has-error': campaignAddForm.name.$invalid && campaignAddForm.name.$dirty}">
+    <form role="form" name="expEditForm" novalidate>
+		  <div class="form-group" ng-class="{'has-error': expEditForm.name.$invalid && expEditForm.name.$dirty}">
 		    <label for="name">Name</label>
-		    <span class="label label-danger pull-right" ng-show="campaignAddForm.name.$error.required && campaignAddForm.name.$dirty">Required</span>
+		    <span class="label label-danger pull-right" ng-show="expEditForm.name.$error.required && expEditForm.name.$dirty">Required</span>
 		    <input type="text" class="form-control" name="name" placeholder="Name" required ng-model="tmp.name">
 		  </div>
-		  <div class="form-group" ng-class="{'has-error': campaignAddForm.start.$invalid && campaignAddForm.start.$dirty}">
+		  <div class="form-group" ng-class="{'has-error': expEditForm.start.$invalid && expEditForm.start.$dirty}">
 		    <label for="start">Code</label>
-		    <span class="label label-danger pull-right" ng-show="campaignAddForm.start.$error.required && campaignAddForm.start.$dirty">Required</span>
+		    <span class="label label-danger pull-right" ng-show="expEditForm.start.$error.required && expEditForm.start.$dirty">Required</span>
 		    <textarea class="form-control" name="code" placeholder="return true;" required ng-model="tmp.code"></textarea>
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="(campaignAddForm)" ng-disable="{campaignAddForm.$valid && campaignAddForm.$dirty}">Save</button>
+		  <button type="submit" class="btn btn-default" ng-click="editExperience()" ng-disabled="expEditForm.$invalid">Save</button>
 		</form>
 <!-- end form -->
   </div>
