--- a/app/components/web_properties/edit.html
+++ b/app/components/web_properties/edit.html
@@ -14,7 +14,8 @@
 		    <span class="label label-danger pull-right" ng-show="propEditForm.password.$error.required && propEditForm.password.$dirty">Required</span>
 		    <input type="url" class="form-control" name="url" placeholder="http://www.mydomain.com" required ng-model="tmpWebproperty.url">
 		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="editSubmit()" ng-disabled="propEditForm.$invalid">Edit</button>
+		  <button type="submit" class="btn btn-success" ng-click="editSubmit()" ng-disabled="propEditForm.$invalid || propEditForm.$pristine">Edit</button>
+		  <button type="submit" class="btn btn-danger" ng-click="delProp()">Delete</button>
 		</form>
 <!-- end form -->
   </div>
