remove default link

--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -5,7 +5,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">EZAB</a>
+    <a class="navbar-brand" ui-sref="webprops({propid: null})">EZAB</a>
   </div>
   <div class="navbar-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav" ng-controller="webpropertiesHeaderListCtrl">
@@ -38,15 +38,13 @@
     </ul>
     <!-- end campaign header -->
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
+          <li><a href="#">Login</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
           <li class="divider"></li>
-          
         </ul>
       </li>
     </ul>
