--- a/app/components/web_properties/list.html
+++ b/app/components/web_properties/list.html
@@ -1,14 +1,18 @@
-<ul class="list-group"
-		ng-controller="webpropertiesListCtrl">
-  <li class="list-group-item"
-  		ng-repeat="prop in WebPropertiesService.webproperties">
-  		<a ng-click="WebPropertiesService.selectWebproperty($index)">
-  			{{prop.name}}
-  		</a>
-  		<span class="badge">
-  			<span class="glyphicon glyphicon-wrench"
-  						ng-click="editWebproperty($index)"
-  			></span>
-  		</span>
-  </li>
-</ul>
+<div class="panel panel-info">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Web Properties</div>
+  <ul class="list-group"
+  		ng-controller="webpropertiesListCtrl">
+    <li class="list-group-item"
+    		ng-repeat="prop in WebPropertiesService.webproperties">
+    		<a ng-click="WebPropertiesService.selectWebproperty($index)">
+    			{{prop.name}}
+    		</a>
+    		<span class="badge">
+    			<span class="glyphicon glyphicon-wrench"
+    						ng-click="editWebproperty($index)"
+    			></span>
+    		</span>
+    </li>
+  </ul>
+</div>
