--- a/app/components/web_properties/main.html
+++ b/app/components/web_properties/main.html
@@ -1,7 +1,4 @@
-<div class="container" style="margin-top:60px">
-    <div class="page-header">
-      <h1 id="container">Web Properties</h1>
-    </div>
+<div class="container">
     <div class="row">
     	<div ui-view="proplist" class="col-lg-4"></div>
     	<div ui-view="propcontrol" class="col-lg-8"></div>
