--- a/app/components/campaigns/main.html
+++ b/app/components/campaigns/main.html
@@ -1,7 +1,4 @@
-<div class="container" style="margin-top:10px">
-    <div class="page-header">
-      <h1 id="container">Campaigns</h1>
-    </div>
+<div class="container">
     <div class="row">
     	<div ui-view="campaignlist" class="col-lg-3"></div>
     	<div ui-view="campaigncontrol" class="col-lg-8"></div>
