--- a/app/components/dash/main.html
+++ b/app/components/dash/main.html
@@ -1,7 +1,4 @@
-<div class="container" style="margin-top:60px">
-    <div class="page-header">
-      <h1 id="container">DASHBOARD</h1>
-    </div>
+<div class="container">
     <div class="row">
     	<div ui-view="explist" class="col-lg-4"></div>
     	<div ui-view="graph" class="col-lg-8"></div>
