--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -37,16 +37,14 @@
       <li><a href="">{{CampaignService.currentCampaign.name}}</a></li>
     </ul>
     <!-- end campaign header -->
-    <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-        </ul>
-      </li>
-    </ul>
+    <div class="nav navbar-nav navbar-right" 
+      ng-controller="sessionHeaderCtrl"
+      style="margin-right:30px"
+      >
+        <button class="btn btn-link"
+          ng-click="logout()">
+          Logout
+        </button>
+    </div>
   </div>
 </div>
