codemirror editor directive

--- a/app/components/campaigns/campaigns.edit.html
+++ b/app/components/campaigns/campaigns.edit.html
@@ -12,13 +12,13 @@
 		  <div class="form-group" ng-class="{'has-error': campaignEditForm.start.$invalid && campaignEditForm.start.$dirty}">
 		    <label for="start">Start</label>
 		    <span class="label label-danger pull-right" ng-show="campaignEditForm.start.$error.required && campaignEditForm.start.$dirty">Required</span>
-		    <textarea class="form-control" name="start" placeholder="return true;" required ng-model="tmp.start"></textarea>
+		    <textarea editor class="form-control" name="start" placeholder="return true;" required ng-model="tmp.start"></textarea>
 		  </div>
 		  
 		  <div class="form-group" ng-class="{'has-error': campaignEditForm.success.$invalid && campaignEditForm.success.$dirty}">
 		    <label for="success">Success</label>
 		    <span class="label label-danger pull-right" ng-show="campaignEditForm.success.$error.required && campaignEditForm.success.$dirty">Required</span>
-		    <textarea class="form-control" name="success" placeholder="return true;" required ng-model="tmp.success"></textarea>
+		    <textarea editor class="form-control" name="success" placeholder="return true;" required ng-model="tmp.success"></textarea>
 		  </div>
 		  <button type="submit" class="btn btn-success" ng-click="editCampaign()" ng-disabled="campaignEditForm.$invalid || campaignEditForm.$pristine">Edit</button>
 		  <button type="submit" class="btn btn-danger" ng-click="delCampaign()">Delete</button>
