--- a/app/components/experiences/exp.edit.html
+++ b/app/components/experiences/exp.edit.html
@@ -12,7 +12,7 @@
 		  <div class="form-group" ng-class="{'has-error': expEditForm.start.$invalid && expEditForm.start.$dirty}">
 		    <label for="start">Code</label>
 		    <span class="label label-danger pull-right" ng-show="expEditForm.start.$error.required && expEditForm.start.$dirty">Required</span>
-		    <textarea class="form-control" name="code" placeholder="return true;" required ng-model="tmp.code"></textarea>
+		    <textarea editor class="form-control" name="code" placeholder="return true;" required ng-model="tmp.code"></textarea>
 		  </div>
 		  <button class="btn btn-success" 
 		  	ng-click="editExperience()" 
