--- a/app/components/campaigns/campaigns.add.html
+++ b/app/components/campaigns/campaigns.add.html
@@ -12,13 +12,13 @@
 		  <div class="form-group" ng-class="{'has-error': campaignAddForm.start.$invalid && campaignAddForm.start.$dirty}">
 		    <label for="start">Start</label>
 		    <span class="label label-danger pull-right" ng-show="campaignAddForm.start.$error.required && campaignAddForm.start.$dirty">Required</span>
-		    <textarea class="form-control" name="start" placeholder="return true;" required ng-model="camp.start"></textarea>
+		    <textarea editor class="form-control" name="start" required ng-model="camp.start" id="campaignStart"></textarea>
 		  </div>
 		  
 		  <div class="form-group" ng-class="{'has-error': campaignAddForm.success.$invalid && campaignAddForm.success.$dirty}">
 		    <label for="success">Success</label>
 		    <span class="label label-danger pull-right" ng-show="campaignAddForm.success.$error.required && campaignAddForm.success.$dirty">Required</span>
-		    <textarea class="form-control" name="success" placeholder="return true;" required ng-model="camp.success"></textarea>
+		    <textarea editor name="success" required ng-model="camp.success"></textarea>
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="createCampaign()" ng-disabled="campaignAddForm.$invalid">Add</button>
 		</form>
