--- a/app/components/experiences/exp.add.html
+++ b/app/components/experiences/exp.add.html
@@ -12,7 +12,7 @@
 		  <div class="form-group" ng-class="{'has-error': expAddForm.start.$invalid && expAddForm.start.$dirty}">
 		    <label for="start">Code</label>
 		    <span class="label label-danger pull-right" ng-show="expAddForm.start.$error.required && expAddForm.start.$dirty">Required</span>
-		    <textarea class="form-control" name="code" placeholder="return true;" required ng-model="tmp.code"></textarea>
+		    <textarea editor class="form-control" name="code" placeholder="return true;" required ng-model="tmp.code"></textarea>
 		  </div>
 		  <button type="submit" class="btn btn-success" ng-click="createExperience()" ng-disabled="expAddForm.$invalid">Save</button>
 		</form>
