--- a/app/components/campaigns/campaigns.edit.html
+++ b/app/components/campaigns/campaigns.edit.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="campaignsEditCtrl">
+<div class="panel panel-info" ng-controller="campaignsEditCtrl">
   <!-- Default panel contents -->
   <div class="panel-heading">Edit</div>
   <div class="panel-body">
