--- a/app/components/dash/graph.html
+++ b/app/components/dash/graph.html
@@ -1,12 +1,5 @@
 
 <style>
-
-
-/*#graph text {
-  fill: white;
-  font: 10px sans-serif;
-  text-anchor: end;
-}*/
 .indent {
     padding-left: 5px;
 }
@@ -48,5 +41,13 @@ rect:hover {
 
 </style>
 <div>
-	<graph></graph>
+	<div class="panel panel-info">
+        <div class="panel-heading">
+            Status
+        </div>
+        <div class="panel-body">
+            <graph></graph>
+        </div>
+    </div>
+    
 </div>
