--- a/app/components/experiences/exp.list.html
+++ b/app/components/experiences/exp.list.html
@@ -1,11 +1,11 @@
-<div class="panel panel-info"
+<div class="panel panel-primary"
     ng-controller="experiencesListCtrl">
   <!-- Default panel contents -->
   <div class="panel-heading">
     Experiences
-    <button class="btn btn-primary pull-right btn-xs" 
+    <button class="btn btn-success pull-right btn-xs" 
       ng-click="addExperience()">
-      Add
+      Create
     </button>
   </div>
     
