--- a/app/components/web_properties/edit.html
+++ b/app/components/web_properties/edit.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="webpropertiesEditCtrl">
+<div class="panel panel-info" ng-controller="webpropertiesEditCtrl">
   <!-- Default panel contents -->
   <div class="panel-heading">
   	<span>Edit Web Property</span>
