--- a/app/components/web_properties/list.html
+++ b/app/components/web_properties/list.html
@@ -1,8 +1,13 @@
-<div class="panel panel-info">
+<div class="panel panel-primary" ng-controller="webpropertiesListCtrl">
   <!-- Default panel contents -->
-  <div class="panel-heading">Web Properties</div>
-  <ul class="list-group"
-  		ng-controller="webpropertiesListCtrl">
+  <div class="panel-heading">
+    Web Properties
+    <button class="btn btn-success pull-right btn-xs" 
+      ng-click="addRoute()">
+      Create
+    </button>
+  </div>
+  <ul class="list-group">
     <li class="list-group-item"
     		ng-repeat="prop in WebPropertiesService.webproperties">
     		<a ng-click="WebPropertiesService.selectWebproperty($index)">
