--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -53,7 +53,7 @@
       ng-controller="sessionHeaderCtrl"
       style="margin-right:30px"
       >
-        <button class="btn btn-link"
+        <button class="btn btn-primary" id="logout-btn"
           ng-click="logout()">
           Logout
         </button>
