--- a/app/components/experiences/exp.add.html
+++ b/app/components/experiences/exp.add.html
@@ -2,6 +2,11 @@
   <!-- Default panel contents -->
   <div class="panel-heading">Add</div>
   <div class="panel-body">
+  	<div class="alert alert-info">
+  	<strong>
+  		How you'd like to alter the users experience
+  	</strong>
+    <br/>For example. document.querySelector('#buy-button').style.background = "#FFF";</div>
     <!-- start form -->
     <form role="form" name="expAddForm" novalidate>
 		  <div class="form-group" ng-class="{'has-error': expAddForm.name.$invalid && expAddForm.name.$dirty}">
