--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -11,8 +11,13 @@
     		<form role="form" name="loginHomeForm" novalidate>
 				  <div class="form-group" ng-class="{'has-error': loginHomeForm.email.$invalid && loginHomeForm.email.$dirty}">
 				    <label for="email">Email</label>
-				    <span class="label label-danger pull-right" ng-show="loginHomeForm.email.$error.required && loginHomeForm.email.$dirty">Required</span>
-				    <input type="text" class="form-control" name="email" placeholder="Email" required ng-model="email">
+				    <span class="label label-danger pull-right" 
+				    			ng-show="loginHomeForm.email.$error.required && loginHomeForm.email.$dirty">
+				    			Required
+				    </span>
+				    <span class="label label-danger pull-right" 
+				    			ng-show="loginHomeForm.email.$error.email && loginHomeForm.email.$dirty">Not a valid email</span>
+				    <input type="email" class="form-control" name="email" placeholder="Email" required ng-model="email">
 				  </div>
 				  <div class="form-group" ng-class="{'has-error': loginHomeForm.password.$invalid && loginHomeForm.password.$dirty}">
 				    <label for="password">Password</label>
